[package]
name = "embedded_font"
version = "0.1.3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"
license = "MIT"
description = "Font rendering (ttf and otf) with embedded-graphics."
repository = "https://codeberg.org/morphUI/embedded_font"
keywords = [
    "text",
    "font",
    "embedded",
    "no_std"
]

[dependencies]
embedded-graphics = "0.7.1"
rusttype = { version = "0.9.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies] 
embedded-graphics-simulator = "0.3.0-alpha.2"
embedded-text = "0.4.0"

[features]
default = ["rusttype/libm-math", "num-traits/libm"]
std = ["rusttype/std", "num-traits/default"]
