[package]
name = "embedded_font"
version = "0.1.3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"
license = "MIT"
description = "Font rendering (ttf and otf) with embedded-graphics."
repository = "https://codeberg.org/morphUI/embedded_font"
keywords = [
    "text",
    "font",
    "embedded",
    "no_std"
]

[dependencies]
embedded-graphics = "0.8"
rusttype = { version = "0.9.2", default-features = false }

[dev-dependencies] 
embedded-graphics-simulator = "0.5"
embedded-text = "0.6"

[features]
default = ["rusttype/libm-math"]
std = ["rusttype/std"]
